--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,7 @@
 .main {
   min-height: 100vh;
   width: 100%;
-  
+
   /* display: flex;
   justify-content: center; */
 }
@@ -43,7 +43,9 @@
   background-color: transparent;
   color: $white;
   background-image: url("/backgrounds/mobile.svg");
-  
+  background-repeat: no-repeat;
+  background-size: cover;
+
   padding: 0 1.25rem;
 
   display: flex;
@@ -63,15 +65,12 @@
   @include break.breakpoint(desktop) {
     padding: 0 auto;
   }
-  background-repeat: no-repeat;
   background-position: center;
   
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   
-  scroll-snap-type: y mandatory;
   overflow-y: scroll;
-  overflow-x: hidden;
   &::-webkit-scrollbar {
 		display: none;
   }
