--- a/src/screens/Projects/Projects.module.scss
+++ b/src/screens/Projects/Projects.module.scss
@@ -43,4 +43,7 @@
     grid-template-columns: repeat(auto-fill, minmax(232px, 1fr));
     padding-bottom: 2rem;
   }
+  @include break.breakpoint(desktop-lg){
+    grid-template-columns: repeat(4, minmax(232px, 1fr));
+  }
 }
