--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,6 +1,37 @@
 @use "../../styles/breakpoints" as break;
 @use "../../styles/variables" as *;
 
+@keyframes avatar-motion {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }  
+  100% {
+    transform: scale(100%);
+    opacity: 1;
+  }
+}
+
+@keyframes name-title {
+  from {
+    opacity: 0;
+    transform: translateX(1.5rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes link-motion {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .hero {
   display: flex;
   align-items: center;
@@ -35,6 +66,10 @@
 
   img {
     border-radius: 50%;
+  }  
+  
+  &__animate {
+    animation: avatar-motion 2000ms ease-out backwards;
   }
 }
 
@@ -42,6 +77,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &__name_animate {
+    animation: name-title 1000ms 1000ms ease-out backwards;
+  }
 
   @include break.landscape(48em){
     align-items: start;
@@ -63,5 +102,9 @@
     width: 100%;
 
     margin-top: .25rem;
+
+    &__animate {
+      animation: link-motion 1500ms 1000ms ease-out backwards;
+    }
   }
 }
