style: Add mobile motions for avatar and name

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,6 +1,16 @@
 @use "../../styles/breakpoints" as break;
 @use "../../styles/variables" as *;
 
+@keyframes mobile-avatar-motion {
+  from {
+    transform: translateY(1.5rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 @keyframes avatar-motion {
   0% {
     transform: scale(0);
@@ -21,6 +31,16 @@
   }
 }
 
+@keyframes mobile-name-title {
+  from {
+    opacity: 0;
+    transform: translateY(1.5rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 @keyframes name-title {
   from {
     opacity: 0;
@@ -80,7 +100,11 @@
   }  
   
   &__animate {
-    animation: avatar-motion 2000ms ease-out backwards;
+    animation: mobile-avatar-motion 2000ms ease-out backwards;
+    
+    @include break.breakpoint(desktop){
+      animation: avatar-motion 2000ms ease-out backwards;
+    }
   }
 }
 
@@ -90,7 +114,11 @@
   align-items: center;
 
   &__name_animate {
-    animation: name-title 1000ms 1000ms ease-out backwards;
+    animation: mobile-name-title 1000ms 400ms ease-out backwards;
+
+    @include break.breakpoint(desktop) {
+      animation: name-title 1000ms 1000ms ease-out backwards;
+    }
   }
 
   @include break.landscape(48em){
