--- a/src/components/Tecnologies/Tecnologies.module.scss
+++ b/src/components/Tecnologies/Tecnologies.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/breakpoints" as break;
+@use "../../styles/keyframes";
 
 .image {
   display: grid;
@@ -20,4 +21,19 @@
   @include break.landscape(63.9375em){
     display: none;
   }
+}
+
+/* @keyframes tecnologies-animate {
+  from {
+    opacity: 0;
+    transform: translateY(1.5rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} */
+
+.animate {
+  animation: reveal-animate 1000ms ease-out backwards;
 }
