style: Add animation in the header of desktop comp

--- a/src/components/NavigationDesktop/NavitationDesktop.module.scss
+++ b/src/components/NavigationDesktop/NavitationDesktop.module.scss
@@ -1,5 +1,6 @@
 @use "../../styles/variables" as *;
 @use "../../styles/breakpoints" as break;
+@use "../../styles/keyframes";
 
 .container {
   display: none;
@@ -23,6 +24,8 @@
 
     li {
       padding: .5rem;
+
+      animation: reveal-animate 1000ms ease-out backwards;
     }
   }
 
