style: Add change opacity keyframe

--- a/src/styles/_keyframes.scss
+++ b/src/styles/_keyframes.scss
@@ -17,3 +17,12 @@
     transform: translateY(1rem);
   }
 }
+
+@keyframes show-animate {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
