--- a/src/screens/Projects/Projects.module.scss
+++ b/src/screens/Projects/Projects.module.scss
@@ -1,5 +1,6 @@
 @use "../../styles/variables" as *;
 @use "../../styles/breakpoints" as break;
+@use "../../styles/keyframes";
 @forward "../../styles/util";
 
 .projects {
@@ -18,6 +19,10 @@
 
 .header {
   margin-bottom: 1rem;
+
+  &__animate {
+    animation: reveal-animate 1500ms ease-out forwards
+  }
 }
 
 .wrapper {
@@ -29,6 +34,10 @@
   width: 100%;
 
   padding-bottom: 1rem;
+
+  &__animate {
+    animation: reveal-animate 1200ms ease-out backwards;
+  }
 
   @include break.breakpoint(tablet) {
     gap: .5rem;
